# bazel-es6_sources-composite-failure

./: BUILD.bazel  README.md  WORKSPACE  index.ts  package-lock.json  package.json
